change child name

--- a/src/basicUI/img/image-scale-button/image-scale-button.component.html
+++ b/src/basicUI/img/image-scale-button/image-scale-button.component.html
@@ -7,5 +7,5 @@
  * @LastEditTime: 2021-10-19 16:10:53
 -->
 <div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick($event)" appScaleButton [smooth]="smooth" [enabled]="enabled" (touchDown)="onDown()" (touchUp)="onUp()">
-  <div class="imgIcon" [attr.style]="iconStyle" #carousel></div>
+  <div class="imgIcon" [attr.style]="iconStyle" #scaleButtonInner></div>
 </div>
